<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor2"
    tools:context="com.inventory.tfgproject.view.LoginScreen">

    <ImageView
        android:id="@+id/imgLogo4"
        android:layout_width="179dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toTopOf="@+id/bkgLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_dstock" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bkgLogin"
        android:layout_width="414dp"
        android:layout_height="0dp"
        android:background="@drawable/roundrectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/btnLoginScreen"
            android:layout_width="307dp"
            android:layout_height="81dp"
            android:fontFamily="@font/convergence"
            style="@style/AlternativeButton"
            android:text="@string/login"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInformation"
            app:layout_constraintVertical_bias="0.578" />

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="390dp"
            android:layout_height="55dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/convergence"
            android:text="Iniciar Sesión"
            android:textAlignment="center"
            android:textColor="@color/backgroundColor2"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="o"
            android:textColor="@color/backgroundColor2"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginScreen"
            app:layout_constraintVertical_bias="0.087" />

        <ImageView
            android:id="@+id/bkgCircle"
            android:layout_width="70dp"
            android:layout_height="58dp"
            android:contentDescription="@string/desc_floating"
            android:src="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtO"
            app:layout_constraintVertical_bias="0.389" />

        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="50dp"
            android:layout_height="72dp"
            android:contentDescription="@string/desc_floating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtO"
            app:layout_constraintVertical_bias="0.365"
            app:srcCompat="@drawable/logo_google" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLoginContainer"
            style="@style/TextInputLayoutStyle3"
            android:layout_width="368dp"
            android:layout_height="92dp"
            android:textColorHint="@color/backgroundColor2"
            android:imeOptions="actionNext"
            app:counterTextColor="@color/backgroundColor2"
            app:helperText="@string/required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/email_Register"
                android:inputType="textWebEmailAddress"
                android:lines="1"
                android:paddingStart="45dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLoginContainer"
            style="@style/TextInputLayoutStyle3"
            android:layout_width="372dp"
            android:layout_height="92dp"
            android:imeOptions="actionDone"
            android:textColorHint="@color/backgroundColor2"
            app:counterTextColor="@color/backgroundColor2"
            app:helperText="@string/required"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/backgroundColor2"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/backgroundColor2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/convergence"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingStart="45dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/convergence"
            android:text="@string/forgot_password"
            android:textColor="@color/backgroundColor2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordLoginContainer"
            app:layout_constraintTop_toBottomOf="@+id/passwordLoginContainer" />

        <ProgressBar
            android:id="@+id/pbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:indeterminateTint="@color/backgroundColor2"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/txtO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtDstock"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:fontFamily="@font/convergence"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/letters"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/bkgLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="@+id/imgLogo4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />



</androidx.constraintlayout.widget.ConstraintLayout>